<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:gravity="center_vertical"
	android:padding="10sp" >

	<TextView
	   	android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:text="@string/benvinguda1"
		android:textSize="16sp" />

	<TextView
	   	android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:text="@string/benvinguda2"
		android:textSize="16sp" />
		
	<TextView
	   	android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:text="@string/benvinguda3"
		android:textSize="16sp" />
   
    <Button
    	android:id="@+id/entrar"
    	android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:text="@string/entrar"
		android:gravity="center_vertical" />
</LinearLayout>
