<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:gravity="center_vertical"
	android:padding="10sp" >
	
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
	    <TableRow>
	        <TextView
	            android:layout_column="1"
	            android:text="@string/nomrss"
	            android:textSize="16sp"
	            android:padding="3dip" />
	        <EditText
	        	android:id="@+id/nomrss"
	        	android:layout_width="180sp"
	            android:text="MyRSS"
	            android:gravity="left"
	            android:padding="3dip" />
	    </TableRow>
	    <TableRow>
	        <TextView
	            android:layout_column="1"
	            android:text="@string/direccio"
	            android:textSize="16sp"
	            android:padding="3dip" />
	        <EditText
	        	android:id="@+id/direccio"
	        	android:layout_width="180sp"
	            android:text="http://"
	            android:gravity="left"
	            android:padding="3dip" />
	    </TableRow>
	    <TableRow>
	        <TextView
	            android:layout_column="1"
	            android:text="@string/icon"
	            android:textSize="16sp"
	            android:padding="3dip" />
	        <Spinner
	        	android:id="@+id/spinner"
	        	android:layout_width="180sp"
	            android:gravity="left"
	            android:padding="3dip"
	            android:prompt="@string/escogeix"
	             />
	    </TableRow>
	</TableLayout>

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		android:padding="10sp" >
		<Button
	    	android:id="@+id/afegir"
	    	android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/afegir"
			android:gravity="center_vertical"
			/>
	    <Button
	    	android:id="@+id/cancelar"
	    	android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/cancelar"
			android:gravity="center_vertical"
			/>
	</LinearLayout>
</LinearLayout>
